--- a/wods/2017-06-20.html
+++ b/wods/2017-06-20.html
@@ -17,7 +17,7 @@
     <h1><span class="date"></span> - scaled</h1>
     <strong>Barbell warm up</strong>
 
-    <h2>"Snatch"</h2>
+    <h2>"Snatch" eller "Clean"</h2>
     <p>Bygg upp tyngsta 3RM</p>
 
     <h2>"Jeremy"</h2>
