--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </style>
   </head>
   <body>
-    <div id="carousel-example-generic" class="slide">
+    <div id="carousel-example-generic" class="carousel slide">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -42,14 +42,7 @@
 
   <!-- Wrapper for slides -->
   <div id="wod" class="carousel-inner" role="listbox">
-    <div class="item active jumbotron text-center">
-      <h1>DT</h1>
-    </div>
-    <div class="item">
-      <div class="item jumbotron text-center">
-        <h1>DT scaled</h1>
-      </div>
-    </div>
+    <p>Laddar...</p>
   </div>
 
 
