--- a/wods/2017-06-23.html
+++ b/wods/2017-06-23.html
@@ -1,10 +1,11 @@
 <div class="item active jumbotron text-center">
     <h1><span class="date"></span></h1>
 
-    <h2>Run</h2>
-
-    <p>For time:</p>
-    <p>Run 5km</p>
+    <h2>EMOM 16min</h2>
+    <p>a.) 15 Lounges 10/5kg</p>
+    <p>b.) 15 Goblet Squats 20/10kg</p>
+    <p>c.) 200m run</p>
+    <p>d.) 10 Alternating pistols</p>
 
     <em>Rest 5min</em>
 
@@ -18,12 +19,13 @@
 <div class="item">  
   <div class="item jumbotron text-center">
     <h1><span class="date"></span> - scaled</h1>
-    <strong>Barbell warm up</strong>
 
-    <h2>Run</h2>
+    <h2>EMOM 16min</h2>
+    <p>a.) 15 Lounges</p>
+    <p>b.) 15 Air Squats</p>
+    <p>c.) 100m run</p>
+    <p>d.) 5 Scaled Pistols</p>
 
-    <p>For time:</p>
-    <p>Run 2km</p>
 
     <h2>"Jordan Light(er)"</h2>
 
