--- a/wods/2017-06-23.html
+++ b/wods/2017-06-23.html
@@ -1,37 +1,25 @@
 <div class="item active jumbotron text-center">
     <h1><span class="date"></span></h1>
-    <h2>“RUN”</h2>
-    <p>For time:</p>
-    <p>Run 10/5km</p>
 
-    <h2>“THE CHIEF IS DEAD”</h2>
-    <p>Five 4-minute AMRAPs in 24 minutes</p>
-    <p>AMRAP in 4 minutes</p>
-
-    <ul class="list-unstyled">
-    <li>3 Power Cleans (135/95lb)</li>
-    <li>6 Push-Ups</li>
-    <li>9 Air Squats</li>
-    <li>12 Deadlifts (135/95 lb)</li>
-    <li>1 minute Rest</li>
-    <li>Repeat 5 Times</li>
-    </ul>
+    <div>
+      <h2>“Midsommarafton”</h2>
+      <p>For time:</p>
+      <p>a.) Run 5km/3km</p>
+      <p>b.) 50-40-30-20-10</p>
+      <p>Deadlifts 50/40kg</p>
+      <p>Situps</p>
+      <p>Russian KB-swings 20/10kg</p>
+    </div>
 </div>
 <div class="item">  
   <div class="item jumbotron text-center">
     <h1><span class="date"></span> - scaled</h1>
-
-    <h2>“THE CHIEF IS DEAD”</h2>
-    <p>Five 4-minute AMRAPs in 24 minutes</p>
-    <p>AMRAP in 4 minutes</p>
-
-    <ul class="list-unstyled">
-    <li>3 Power Cleans</li>
-    <li>6 Push-Ups</li>
-    <li>9 Air Squats</li>
-    <li>12 Deadlifts</li>
-    <li>1 minute Rest</li>
-    <li>Repeat 5 Times</li>
-    </ul>
+    <h2>“Midsommarafton”</h2>
+    <p>For time:</p>
+    <p>a.) Run 3/1km</p>
+    <p>b.) 50-40-30-20-10</p>
+    <p>Deadlifts</p>
+    <p>Situps</p>
+    <p>Russian KB-swings</p>    
   </div>
 </div>
