--- a/wods/2017-06-23.html
+++ b/wods/2017-06-23.html
@@ -4,22 +4,21 @@
     <div>
       <h2>“Midsommarafton”</h2>
       <p>For time:</p>
-      <p>a.) Run 5km/3km</p>
-      <p>b.) 50-40-30-20-10</p>
+      <p>a.) 40-30-20-10</p>      
       <p>Deadlifts 50/40kg</p>
       <p>Situps</p>
       <p>Russian KB-swings 20/10kg</p>
+      <p>b.) 1km run</p>
     </div>
 </div>
 <div class="item">  
   <div class="item jumbotron text-center">
     <h1><span class="date"></span> - scaled</h1>
-    <h2>“Midsommarafton”</h2>
-    <p>For time:</p>
-    <p>a.) Run 3/1km</p>
-    <p>b.) 50-40-30-20-10</p>
-    <p>Deadlifts</p>
-    <p>Situps</p>
-    <p>Russian KB-swings</p>    
+      <p>For time:</p>
+      <p>a.) 40-30-20-10</p>      
+      <p>Deadlifts</p>
+      <p>Situps</p>
+      <p>Russian KB-swings 20/10kg</p>
+      <p>b.) 1km run</p>
   </div>
 </div>
